keycloak-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
      - keycloak.10.85.20.247.nip.io
  rules:
  - host: keycloak.10.85.20.247.nip.io
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8080
